--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@babel/preset-env": "^7.26.0",
 		"babel-jest": "^29.7.0",
 		"jest": "^29.7.0",
+		"jest-canvas-mock": "^2.5.2",
 		"jest-environment-jsdom": "^29.7.0",
 		"vite": "^5.4.10"
 	}
