--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.26.0",
 		"@babel/preset-env": "^7.26.0",
+		"@testing-library/dom": "^10.4.0",
 		"babel-jest": "^29.7.0",
 		"jest": "^29.7.0",
 		"jest-canvas-mock": "^2.5.2",
