--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
             - name: Build project
               run: npm run build
 
+            - name: Add 404.html for SPA routing
+              run: cp dist/index.html dist/404.html
+
             - name: Deploy to GitHub Pages
               uses: peaceiris/actions-gh-pages@v3
               with:
